Tue Oct  4 17:24:36 1994  Theodore Y. Ts'o  (tytso@dcl)

	* kdc_hammer.c (get_server_key): Add widen.h and narrow.h around
		declaration to make argument types be widened.

Fri Sep 30 22:08:45 1994  Theodore Y. Ts'o  (tytso@dcl)

	* kdc_hammer.c: Add placeholder for magic number

Thu Sep 29 22:59:09 1994  Theodore Y. Ts'o  (tytso@dcl)

 	* Makefile.in: Relink executable when libraries change


Thu Sep 15 17:38:51 1994  Theodore Y. Ts'o  (tytso@dcl)

	* kdc_hammer.c (get_server_key): index() -> strchr()
